--- a/scoula/frontend/package.json
+++ b/scoula/frontend/package.json
@@ -15,7 +15,8 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-awesome-paginate": "^1.2.0",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-kakao-maps": "^2.3.10"
   },
   "devDependencies": {
     "@rollup/rollup-win32-x64-msvc": "^4.44.0",
