--- a/scoula/backend/build.gradle
+++ b/scoula/backend/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     // Lombok - 보일러플레이트 코드 자동 생성 (@Getter, @Setter, @ToString 등)
     // 최신 버전으로 업데이트 (Java 17+ 지원 개선)
     compileOnly "org.projectlombok:lombok:${lombokVersion}"                    // 컴파일 시에만 필요
-//    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"            // 어노테이션 처리기
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"            // 어노테이션 처리기
 
     // ===== JSON 처리 =====
     // Jackson - JSON 직렬화/역직렬화 라이브러리 (Spring 5.3.x와 호환되는 최신 버전)
@@ -89,7 +89,7 @@ dependencies {
 
     // 테스트에서도 Lombok 사용 (최신 버전)
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
-//    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
     // JUnit 5 - 현대적인 Java 테스팅 프레임워크 (5.13.1 - 최신 안정 버전)
     // 새로운 기능과 버그 수정, 성능 개선 포함
@@ -140,5 +140,5 @@ dependencies {
 }
 // 테스트 실행 설정
 test {
-//    useJUnitPlatform()  // JUnit 5 플랫폼 사용하여 테스트 실행
+    useJUnitPlatform()  // JUnit 5 플랫폼 사용하여 테스트 실행
 }
